--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}/bin/${fileBasenameNoExtension}.exe"
+				"${fileDirname}/bin/${fileBasenameNoExtension}.exe",
+				"-lm"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
