--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}/bin/${fileBasenameNoExtension}.exe",
+				"${fileDirname}/bin/${fileBasenameNoExtension}.o",
 				"-lm"
 			],
 			"options": {
